Attempting to get client to send pointer location to server

--- a/todo.txt
+++ b/todo.txt
@@ -50,3 +50,7 @@ To Do on current task:
 - Figure out our production design
 - Figure out our test strategy (test double?)
 - Test-drive the actual code
+- Only send mouse pointer location when it's inside the drawing area
+
+- Need to translate pageOffset to relativeOffset (do we need to improve design of offset translations?)
+- Maybe real_time_network should actually be real_time_connection -- and an object rather than a monostate module
