Implemented HtmlCoordinate.equals()

--- a/todo.txt
+++ b/todo.txt
@@ -52,6 +52,9 @@ Engineering Tasks:
 
 To Do on current task:
 * Make a HtmlCoordinate object
+	- Update assertion library to have objEquals and other better helper methods
+	- Implement page offset translation code
+	- Implement fromPageCoordinate() factory method
 - Improve client.js
 - Improve _client_test.js
 - Remove pageOffset() and relativeOffset() from HtmlElement and its tests
