--- a/todo.txt
+++ b/todo.txt
@@ -52,6 +52,7 @@ Engineering Tasks:
 
 To Do on current task:
 - Implement fromPageCoordinate() factory method
+- Stop poking into HtmlElement's internals
 - Implement page offset translation code
 - Improve client.js
 - Improve _client_test.js
