--- a/todo.txt
+++ b/todo.txt
@@ -54,5 +54,6 @@ To Do on current task:
 * Modify HtmlElement to return HtmlCoordinate in mouse events
 - Improve _client_test.js to use HtmlCoordinate
 - Stop poking into HtmlElement's internals!
+  - Use .offsetX/Y? Ref Vlad Gurdiga comment, E407: http://www.letscodejavascript.com/v3/comments/live/407#comment-2655306593
 - Should SvgCanvas fail fast if HtmlCoordinate's element doesn't correspond to SvgCanvas? Or should it automatically convert?
 - Remove pageOffset() and relativeOffset() from HtmlElement and its tests
