--- a/todo.txt
+++ b/todo.txt
@@ -52,6 +52,7 @@ Engineering Tasks:
 
 To Do on current task:
 * Modify HtmlElement to return HtmlCoordinate in mouse events
+	- Update _html_element_test.js to use new HtmlCoordinate mouse events
 - Improve _client_test.js to use HtmlCoordinate
 - Stop poking into HtmlElement's internals!
   - Use .offsetX/Y? Ref Vlad Gurdiga comment, E407: http://www.letscodejavascript.com/v3/comments/live/407#comment-2655306593
