--- a/todo.txt
+++ b/todo.txt
@@ -51,8 +51,8 @@ Engineering Tasks:
 - Update smoke tests
 
 To Do on current task:
-* Fix HtmlCoordinate to store page-relative coordinates rather than element-relative coordinates
-	- Modify toRelativeX() and toRelativeY() to take an element
+* Modify SvgCanvas to use toRelativeOffset() instead of toRelativeX() and toRelativeY()
+- Remove relative offsets from HtmlCoordinate internals and update equality tests
 - Modify HtmlElement to return HtmlCoordinate in mouse events
 	- Do we want to modify HtmlCoordinate to be page-relative rather than element-relative?
 	- Update _html_element_test.js to use new HtmlCoordinate mouse events
