--- a/todo.txt
+++ b/todo.txt
@@ -51,10 +51,9 @@ Engineering Tasks:
 - Update smoke tests
 
 To Do on current task:
-* Modify event creation methods to not use pageOffset() and relativeOffset(). Should we send in an HtmlCoordinate?
+* Remove pageOffset() and relativeOffset() from HtmlElement and its tests
 	- Martin Grandrath comments, E414
 		- Remove `element2` from DOM (_html_coordinate_test.js, line 34)
 		- Make from*Offset() parameters an object, for consistency with to*Offset()?
-- Remove pageOffset() and relativeOffset() from HtmlElement and its tests
 - Stop poking into HtmlElement's internals!
   - Use .offsetX/Y? Ref Vlad Gurdiga comment, E407: http://www.letscodejavascript.com/v3/comments/live/407#comment-2655306593
