--- a/todo.txt
+++ b/todo.txt
@@ -51,8 +51,6 @@ Engineering Tasks:
 - Update smoke tests
 
 To Do on current task:
-- Martin Grandrath comments, E414
-	- Remove `element2` from DOM (_html_coordinate_test.js, line 34)
-	- Make from*Offset() parameters an object, for consistency with to*Offset()?
+* take advantage of HtmlElement.trigger*()'s ability to take an HtmlCoordinate
 - Stop poking into HtmlElement's internals!
   - Use .offsetX/Y? Ref Vlad Gurdiga comment, E407: http://www.letscodejavascript.com/v3/comments/live/407#comment-2655306593
