--- a/todo.txt
+++ b/todo.txt
@@ -52,6 +52,7 @@ Engineering Tasks:
 
 To Do on current task:
 * Stop poking into HtmlElement's internals!
-	- Implement getBoundingClientRect()
+	- Rewrite toRelativeOffset()
 		- Account for page scrolling
-	- Rewrite offset conversion code to use DOM functions rather than JQuery functions
+	- Rewrite failFast code (replace it with getComputedStyle and stop failing fast?)
+- Simplify _html_element_test.js (ref Martin Grandrath pull request, https://github.com/jamesshore/lets_code_javascript/pull/12/files#diff-0)
