--- a/todo.txt
+++ b/todo.txt
@@ -51,7 +51,4 @@ Engineering Tasks:
 - Update smoke tests
 
 To Do on current task:
-* Stop poking into HtmlElement's internals!
-	- Rewrite failFast code (replace it with getComputedStyle and stop failing fast?)
-	- Eliminate all uses of JQuery in HtmlCoordinate
-- Simplify _html_element_test.js (ref Martin Grandrath pull request, https://github.com/jamesshore/lets_code_javascript/pull/12/files#diff-0)
+* Simplify _html_element_test.js (ref Martin Grandrath pull request, https://github.com/jamesshore/lets_code_javascript/pull/12/files#diff-0)
