Started on RealTimeConnection.onPointerLocation()

--- a/todo.txt
+++ b/todo.txt
@@ -50,5 +50,9 @@ Engineering Tasks:
 - Update smoke tests for real-time networking
 
 To Do on current task:
-* Modify RealTimeConnection with 'listen to pointer events' abstraction
+* Clean up _network_test_harness client code
+- Clean up _network_test_harness server code
+- Implement harness.sendPointerLocation()
+- Finish implementing onPointerLocation() and tests
+- Provide unique ID with each pointer event
 - Modify client.js to prove that we get pointer events
