Simplified network test harness server shutdown code

--- a/todo.txt
+++ b/todo.txt
@@ -50,8 +50,8 @@ Engineering Tasks:
 - Update smoke tests for real-time networking
 
 To Do on current task:
-* Clean up _network_test_harness client code
-- Clean up _network_test_harness server code
+* Clean up _network_test_harness server code
+- Clean up _network_test_harness client code
 - Implement harness.sendPointerLocation()
 - Finish implementing onPointerLocation() and tests
 - Provide unique ID with each pointer event
