--- a/todo.txt
+++ b/todo.txt
@@ -50,11 +50,10 @@ Engineering Tasks:
 - Update smoke tests for real-time networking
 
 To Do on current task:
-- AT START OF EPISODE: Address E423 comments
 * Clean up _network_test_harness server code
 - Clean up _network_test_harness client code
 - Implement harness.sendPointerLocation()
 - Finish implementing onPointerLocation() and tests
-	- See Martin Grandrath's signature suggestion, E423 comments
+	- Discuss E423 comments
 - Provide unique ID with each pointer event
 - Modify client.js to prove that we get pointer events
