--- a/todo.txt
+++ b/todo.txt
@@ -51,7 +51,7 @@ Engineering Tasks:
 
 To Do on current task:
 * Network test harness: pass 'data' rather than 'parsedUrl' to endpoint handlers?
-	- sendPointerLocation(): don't unpack event, just pass through the entire object
-	- E426 comments
+	- automatically serialize and deserialize data
+- E426 network test harness comments
 - Modify client.js to prove that we get pointer events
 - assert.deepEqual isn't strict -- should it be?
