--- a/todo.txt
+++ b/todo.txt
@@ -50,7 +50,11 @@ Engineering Tasks:
 - Update smoke tests for real-time networking
 
 To Do on current task:
-- automatically serialize and deserialize data
+* automatically serialize and deserialize data
+- Fix 'connections' block location in stopFn
+- Pass in closure variables to functions
+- Split network_test_harness into client, server, and shared files
+
 - E426 network test harness comments
 - Modify client.js to prove that we get pointer events
 - assert.deepEqual isn't strict -- should it be?
