Split _network_test_harness into client, server, and shared pieces

--- a/todo.txt
+++ b/todo.txt
@@ -50,8 +50,7 @@ Engineering Tasks:
 - Update smoke tests for real-time networking
 
 To Do on current task:
-* Pass in closure variables to functions
-- Split network_test_harness into client, server, and shared files
+* Split network_test_harness into client, server, and shared files
 
 - E426 network test harness comments
 - Modify client.js to prove that we get pointer events
