--- a/todo.txt
+++ b/todo.txt
@@ -51,8 +51,7 @@ Engineering Tasks:
 - Update smoke tests for real-time networking
 
 To Do on current task:
-* HtmlElement.appendHtmlToBody("foo");
-- Modify HtmlElement to retrieve elements by selector
+* Modify HtmlElement to retrieve elements by selector
 - Create div
 	- Provide class to client.js
 	- Provide img URL and size to client.js
