--- a/todo.txt
+++ b/todo.txt
@@ -41,6 +41,7 @@ User Stories to finish current MMF:
 
 Engineering Tasks:
 * Client: Make client display "ghost" pointers for other users
+- Style and test our pointer HTML (50% opaque?)
 - Open question: how to make sure our test double matches our real code?
 	- Use sinon.js? testdouble.js?
 - Revisit Martin Grandrath's client connection design question (in E399)
@@ -51,10 +52,5 @@ Engineering Tasks:
 - Update smoke tests for real-time networking
 
 To Do on current task:
-* Create div
-	- Provide class to client.js
-	- Provide img URL and size to client.js
-- Move div according to pointer events
-- Manage multiple cursors
-- Change opacity of cursor
+* Move div according to pointer events
 
