HtmlCoordinate.equals() ignores minor rendering corrections

--- a/todo.txt
+++ b/todo.txt
@@ -52,6 +52,7 @@ Engineering Tasks:
 - Update smoke tests for real-time networking
 
 To Do on current task:
-* Move div according to pointer events
+* Modify HtmlCoordinate.equals() to ignore minor rendering corrections
+- Move div according to pointer events
 - Get smoke test passing (if not complete)
 
