--- a/todo.txt
+++ b/todo.txt
@@ -54,3 +54,4 @@ To Do on current task:
 - setAbsolutePosition() won't work when parent element is positioned
 	- see Mattias Åslund fiddle, E440
 - element positioning test needs to clean up after itself
+- Mocha 3.0: .only() fixed! "itonly" build flag no longer needed
