--- a/todo.txt
+++ b/todo.txt
@@ -50,6 +50,7 @@ Engineering Tasks:
 	- See Scott Corgan comment, E381: http://www.letscodejavascript.com/v3/comments/live/381#comment-2489897377
 - Update smoke tests for real-time networking
 	- Replace Selenium? Fix it?
+	- Update readme to reflect reproducibility issues with Selenium
 
 To Do on current task:
 - setAbsolutePosition() won't work when parent element is positioned
