--- a/todo.txt
+++ b/todo.txt
@@ -53,3 +53,4 @@ Engineering Tasks:
 	- Update readme to reflect reproducibility issues with Selenium
 
 To Do on current task:
+* Test-drive a new 'ghost-pointer' block
