--- a/todo.txt
+++ b/todo.txt
@@ -29,9 +29,9 @@ User Stories to finish current MMF:
 * see other users' mouse pointers
 - send pointer events on touch, not just mouse move?
 - make mouse pointer disappear when it leaves drawing area?
+- make mouse pointer disappear when user disconnects
 - multi-user clear button
 - multi-user line drawing
-- other users' mouse pointers disappear when they leave the drawing area
 - version synchronization across client/server
 - offline handling
 - collision-handling / conflicts / race conditions
@@ -40,10 +40,10 @@ User Stories to finish current MMF:
 - security (handling bad data, denial of service attacks)
 
 Engineering Tasks:
+* Address duplication of pointer event between client, server, and network code (and tests, and test harness)
 - Open question: how to make sure our test double matches our real code?
 	- Use sinon.js? testdouble.js?
 - Revisit Martin Grandrath's client connection design question (in E399)
-- Address duplication of 'mouse' event name between client, server, and network test harness
 - Figure out bundling and distribution for socket.io client
 - Figure out how to de-dupe require paths for common files (such as "_assert.js")
 	- See Scott Corgan comment, E381: http://www.letscodejavascript.com/v3/comments/live/381#comment-2489897377
@@ -52,3 +52,8 @@ Engineering Tasks:
 	- Update readme to reflect reproducibility issues with Selenium
 
 To Do on current task:
+- Create a 'event' object that duplicate bare event object
+- Add constructor to event object and refactor to use it
+- Add serializer to event object and refactor to use that
+- ???
+- profit!
