--- a/todo.txt
+++ b/todo.txt
@@ -52,8 +52,7 @@ Engineering Tasks:
 	- Update readme to reflect reproducibility issues with Selenium
 
 To Do on current task:
-- Create a 'event' object that duplicate bare event object
+* Create a 'event' object that duplicate bare event object
 - Add constructor to event object and refactor to use it
 - Add serializer to event object and refactor to use that
-- ???
-- profit!
+- Do we have a separate client and server event object?
