--- a/todo.txt
+++ b/todo.txt
@@ -56,3 +56,4 @@ To Do on current task:
 - Add constructor to event object and refactor to use it
 - Add serializer to event object and refactor to use that
 - Do we have a separate client and server event object?
+- Address "mouse" event name duplication
