--- a/todo.txt
+++ b/todo.txt
@@ -53,6 +53,8 @@ Engineering Tasks:
 
 To Do on current task:
 * Create a 'event' object that duplicate bare event object
+- Fix Jake so that shared tests run under their own quick build target (run on server and client?)
+- RealTimeConnection we're "deserializing" the NetworkPointerEvent by peeking in at individual properties
 - Add constructor to event object and refactor to use it
 - Add serializer to event object and refactor to use that
 - Do we have a separate client and server event object?
