--- a/todo.txt
+++ b/todo.txt
@@ -52,10 +52,8 @@ Engineering Tasks:
 	- Update readme to reflect reproducibility issues with Selenium
 
 To Do on current task:
-* Create a 'event' object that duplicate bare event object
+* Add serializer to NetworkPointerEvent object and refactor to use that
+- Create a client-side 'event' object that replaces bare event object
 - Fix Jake so that shared tests run under their own quick build target (run on server and client?)
-- RealTimeConnection we're "deserializing" the NetworkPointerEvent by peeking in at individual properties
-- Add constructor to event object and refactor to use it
-- Add serializer to event object and refactor to use that
 - Do we have a separate client and server event object?
 - Address "mouse" event name duplication
