--- a/todo.txt
+++ b/todo.txt
@@ -52,10 +52,7 @@ Engineering Tasks:
 	- Update readme to reflect reproducibility issues with Selenium
 
 To Do on current task:
-* Add serializer to NetworkPointerEvent object and refactor to use that
-	- Rename NetworkPointerEvent.fromObject() --> fromSerializableObject()
-	- Rename NetworkPointerEvent --> ServerPointerEvent
-- Create a ClientPointerEvent that replaces bare event object
+* Create a ClientPointerEvent that replaces bare event object
 - Fix Jake so that shared tests run under their own quick build target (run on server and client?)
 - Do we have a separate client and server event object?
 - Address "mouse" event name duplication
