--- a/todo.txt
+++ b/todo.txt
@@ -50,3 +50,5 @@ Engineering Tasks:
 	- Update readme to reflect reproducibility issues with Selenium
 
 To Do on current task:
+- At start of episode:
+	- Discuss Mattias Åslund comment, E449 (re function names)
