--- a/todo.txt
+++ b/todo.txt
@@ -41,10 +41,9 @@ User Stories to finish current MMF:
 	- nsp, snyk
 
 Engineering Tasks:
+* Figure out how to de-dupe require paths for common files (such as "_assert.js")
 - Open question: how to make sure our test double matches our real code?
 	- Use sinon.js? testdouble.js?
-- Figure out how to de-dupe require paths for common files (such as "_assert.js")
-	- See Scott Corgan comment, E381: http://www.letscodejavascript.com/v3/comments/live/381#comment-2489897377
 - Increase Mocha's timeout to prevent spurious test failures due to CPU overload
 - Update smoke tests for real-time networking
 	- Replace Selenium? Fix it?
@@ -52,3 +51,19 @@ Engineering Tasks:
 	- Update readme to reflect reproducibility issues with Selenium
 
 To Do on current task:
+- Move fail_fast.js and one client require variable
+- Smoke test
+- Move other fail_fast requires
+- Move _assert.js
+- Be sure to smoke test -- make sure Browserify works
+
+- Require options - thanks to https://gist.github.com/branneman/8048520
+	- NODE_PATH environment variable or 'app-module-path' module (also, 'aliasify' courtesy of Scott Corgan, E381)
+		+ keep code where it's at
+		- requires configuration in each entry point
+	- Create our own node_modules directory
+		+ uses all built-in module resolution
+		- unusual use node_modules; counter to what most people expect
+		- it can cause problems with some tools
+		- requires us to move code, could make it hard to find
+		+ strictly limit what's easily accessible
