--- a/todo.txt
+++ b/todo.txt
@@ -50,12 +50,7 @@ Engineering Tasks:
 	- Update readme to reflect reproducibility issues with Selenium
 
 To Do on current task:
-- Factory for creating a null RealTimeConnection
-- connect
-- disconnect
-- sendPointerLocation
-- onPointerLocation
-- getSocketId
-- isConnected
+* Get NullRealTimeConnection working in _client_test.js
+-
 - Consider: is a 'nullIo' object better than conditionals?
 - Run behavior tests from both regular and Null RealTimeConnection tests?
