--- a/todo.txt
+++ b/todo.txt
@@ -56,3 +56,4 @@ To Do on current task:
 	- Consider: is a 'nullIo' object better than conditionals?
 - Improve test duplication
 	- Run behavior tests from both regular and Null RealTimeConnection tests?
+- UI tests now depend on network code...?
