--- a/todo.txt
+++ b/todo.txt
@@ -54,6 +54,8 @@ To Do on current task:
 	- Should onPointerLocation() and triggerPointerLocation use event emitter?
 	- Shouldn't mix sync and async callbacks (ref E458 comments)
 	- Possible bug: RealTimeConnection.disconnect() should use .once() not .on(); could callback twice
+		- and connect() too?
+	- Use URL class in RealTimeConnection.parsePort? (ref Martin Grandrath, E464 comments)
 - Improve test duplication
 	- Run behavior tests from both regular and Null RealTimeConnection tests?
 	- Group tests by method rather than connection type?
