--- a/todo.txt
+++ b/todo.txt
@@ -48,4 +48,5 @@ Engineering Tasks:
 	- Update readme to reflect reproducibility issues with Selenium
 
 To Do on current task:
-
+- AT START OF EPISODE:
+	- Increased Mocha and Karma timeouts
